--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.20",
+    "prisma": "^4.6.1",
     "ts-node": "^10.9.1"
   }
 }
