--- a/.env
+++ b/.env
@@ -4,5 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-DATABASE_URL="postgresql://ybookdevuser:X2Rspww2VooQdIF8xJDF@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://ybookdevuser:X2Rspww2VooQdIF8xJDF@ybook.c5tq6rjr9dif.eu-west-3.rds.amazonaws.com:5432/ybookdev?schema=public"
