partial configuration of AWS environment variables

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://ybookdevuser:X2Rspww2VooQdIF8xJDF@ybook.c5tq6rjr9dif.eu-west-3.rds.amazonaws.com:5432/ybookdev?schema=public"
+
+AWS_ACCESS_KEY_ID
+
+AWS_SECRET_ACCESS_KEY
+
+AWs_DEFAULT_REGION = 'eu-west-3'
