--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jwt-decode": "^3.1.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
